添加Regex输入。丰富注释